# reqlang-expr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TECH.md  USAGE.md  coverage.sh  justfile  repl.sh
.github/workflows/: ci.yml  publish-docker.yml
examples/: builtins.rs  compiler.rs  disassembler.rs  disassembler_from_bytecode.rs  interpreter.rs  lexer.rs  parser.rs  repl.rs
spec/: call.expr  call.expr.interpreted  call.expr.tokens  call_id.expr  call_id.expr.tokens  call_id_with_id_arg.expr  call_id_with_id_arg.expr.tokens  call_id_with_string.expr  call_id_with_string.expr.disassembled  call_id_with_string.expr.tokens  call_with_args.expr  concat_bools.expr  concat_fns.expr  concat_fns.expr.interpreted  eq_matching_bools.expr.disassembled  eq_matching_builtins.expr.disassembled  eq_matching_strings.expr  eq_matching_strings.expr.disassembled  eq_mismatching_bools.expr.disassembled  eq_mismatching_builtins.expr  eq_mismatching_strings.expr.disassembled  false.expr.tokens  not_false.expr.disassembled  prompt.expr  prompt.expr.interpreted  prompt.expr.tokens  secret.expr.disassembled  string.expr  string.expr.disassembled  string.expr.tokens  type_builtin_id.expr  type_false.expr  type_string_empty.expr  type_true.expr  variable.expr  variable.expr.disassembled  variable.expr.tokens
spec/invalid/: eq_no_args.expr  eq_no_args.expr.disassembled  eq_one_arg.expr  eq_one_arg.expr.disassembled  eq_too_many_args.expr  eq_too_many_args.expr.interpreted  not_id.expr  not_id.expr.disassembled  not_id.expr.interpreted  not_type_id.expr  not_type_id.expr.disassembled  not_type_id.expr.interpreted  undefined_client_value.expr.disassembled  undefined_identifier.expr.interpreted  undefined_prompt.expr.disassembled  undefined_secret.expr.interpreted  undefined_var.expr.interpreted
spec/valid/: call.expr.disassembled  call_cond_false.expr  call_cond_true.expr  call_id.expr.disassembled  call_id_with_id_arg.expr  call_id_with_id_arg.expr.disassembled  call_id_with_string.expr  (+53 more)
src/: ast.rs  builtins.rs  cli.rs  cliutil.rs  compiler.rs  disassembler.rs  errors.rs  exprlang.lalrpop  grammar.lalrpop  lexer.rs  lexing.rs  lib.rs  main.rs  parser.lalrpop  parser.rs  span.rs  types.rs  value.rs  vm.rs
tests/: integration_tests.rs  spec_tests.rs
