[package]
name = "reqlang-expr"
description = "A tiny (bytecode compiled, stack VM interpreted) expression language for reqlang's templating engine."
version = "0.1.0"
license = "MIT"
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[dev-dependencies]
pretty_assertions = "1.4.1"

[dependencies]
logos = "0.15.0"
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
pastey = "0.1.0"
iota = "0.2.3"
clap = { version = "4.4.16", features = ["derive"] }
reedline = "0.40.0"
regex = "1.11.1"
thiserror = "2"
once_cell = "1.21.3"
